# gsl-test

./: CMakeLists.txt  README.md  appveyor.yml  asm_helper.cmd  azure-pipelines.yml
asm/Visual Studio 2017_17_x86_Debug/: no_exception_throw_tests_asm.asm  span_tests_asm.asm
tests/: CMakeLists.txt  no_exception_throw_tests.cpp  span_tests.cpp  test.cpp
